# wordle-tutorial

./: README.md
part1/: Cargo.toml  README.md
part1/src/: main.rs
part2/: Cargo.toml  README.md
part2/res/: dictionary.txt
part2/src/: main.rs
part3/: .gitignore  Cargo.toml  README.md
part3/src/: dictionary.rs  main.rs  word_base.rs
part3/src/lang/: locale.rs
part3/src/text/: mod.rs  text_dictionary.rs  text_word_base.rs
part4/: Cargo.toml  README.md
part4/res/: dictionary_en.txt  source_file.txt  word_base.txt
part4/src/: dictionary.rs  lib.rs  main.rs  word_base.rs
part4/src/text/: mod.rs  text_dictionary.rs  text_word_base.rs
part4/tests/: text_word_base_test.rs
part5/: Cargo.toml  README.md
part5/res/db/: create.sql  create_postgres.sql  dictionary.db  drop.sql
part5/src/: dictionary.rs  lib.rs  main.rs  schema.rs
part5/src/db/: db_dictionary.rs  mod.rs
part5/src/text/: text_dictionary.rs
part5/tests/: text_dictionary_test.rs
part6/: .env  .gitignore  Cargo.toml  README.md
part6/res/: dictionary_en.txt  source_file.txt
part6/res/db/: dictionary.db
part6/src/: dictionary.rs  main.rs
part6/src/db/: db_dictionary.rs  model.rs  schema.rs
part6/src/lang/: locale.rs
part6/src/text/: text_dictionary.rs
part6/tests/: text_dictionary_test.rs
